[package]
name = "simple_db"
version = "0.1.0"
authors = ["stefano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "0.8.1", features = ["v4"]}
